recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: identifier expected but ')' found.
  avancer(100.);
              ^FourSquare:3: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:4: error: identifier expected but ')' found.
  avancer(100.);
              ^FourSquare:5: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:6: error: identifier expected but ')' found.
  avancer(100.);
              ^FourSquare:7: error: identifier expected but ')' found.
  droite(90.);
            ^FourSquare:8: error: identifier expected but ')' found.
  avancer(100.)
              ^FourSquare:12: error: identifier expected but ')' found.
droite(90.);
          ^FourSquare:13: error: identifier expected but ')' found.
droite(90.);
          ^FourSquare:15: error: identifier expected but ')' found.
droite(90.);
          ^FourSquare:16: error: identifier expected but ')' found.
droite(90.);
          ^FourSquare:18: error: identifier expected but ')' found.
droite(90.);
          ^FourSquare:19: error: identifier expected but ')' found.
droite(90.);
          ^