recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  avancer(100.);
  droite(90.);
  avancer(100.);
  droite(90.);
  avancer(100.);
  droite(90.);
  avancer(100.)
}

run();
droite(90.);
droite(90.);
run();
droite(90.);
droite(90.);
run();
droite(90.);
droite(90.);
run();

